smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/namespace/namespace-syntax-error.smithy
// Syntax error at line 2, column 30: Expected IDENTIFIER but found NEWLINE('\n') | Model
namespace not.valid.trailing.
